fix aligning bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,5 +6,8 @@
 
 .object {
   position: absolute;
-  /* transform: translate(-50%, -50%); */
+}
+
+.object.explode {
+  transform: translate(-50%, -50%);
 }
